update aem debug options